[package]
name = "evm-precompiles"
version = "0.2.1"
authors = []
edition = "2021"
license = "MIT"
description = "Utils to write EVM precompiles."
homepage = "https://github.com/ccmlm/evm-precompiles"
repository = "https://github.com/ccmlm/evm-precompiles.git"
keywords = ["eth", "evm"]
categories = ["data-structures", "algorithms"]

[dependencies]
ethereum = { version = "0.11.1", default-features = false, features = ["with-serde"] }
evm = { version = "0.33.1", default-features = false, features = ["with-serde"] }
primitive-types = { version = "0.10.1", default-features = false }
num_enum = { version = "0.5.6", default-features = false }
sha3 = { version = "0.10.1", default-features = false }
evm-precompiles-derive= "0.2.1"
log = "0.4.14"
