[package]
name = "evm-precompiles"
version = "0.2.1"
authors = []
edition = "2021"
license = "MIT"
description = "Utils to write EVM precompiles."
homepage = "https://github.com/Overealityio/evm-precompiles"
repository = "https://github.com/Overealityio/evm-precompiles.git"
keywords = ["eth", "evm"]
categories = ["data-structures", "algorithms"]

[dependencies]
evm = { version = "0.35", default-features = false, features = ["with-serde"] }
ethereum = { version = "0.12", default-features = false, features = ["with-serde"] }
ethereum-types = "0.13.1"
num_enum = { version = "0.5.6", default-features = false }
evm-precompiles-derive= { git = "https://github.com/Overealityio/evm-precompiles-derive", branch = "main" }
log = "0.4.14"
