[package]
name = "evm-precompiles"
version = "0.2.2"
authors = []
edition = "2021"
license = "MIT"
description = "Utils to write EVM precompiles."
homepage = "https://github.com/rust-util-collections/evm-precompiles"
repository = "https://github.com/rust-util-collections/evm-precompiles.git"
keywords = ["eth", "evm"]
categories = ["data-structures", "algorithms"]

[dependencies]
evm = { version = "0.37", default-features = false, features = ["with-serde"] }
ethereum = { version = "0.14", default-features = false, features = ["with-serde"] }
ethereum-types = "0.14.0"
num_enum = { version = "0.5.6", default-features = false }
evm-precompiles-derive= { git = "https://github.com/rust-util-collections/evm-precompiles-derive", branch = "main" }
log = "0.4.14"
